namespace ServiceDeskLite.Domain.Common;

public sealed record DomainError(string Code, string Message);
