namespace ServiceDeskLite.Domain.Tickets;

public enum TicketPriority
{
    Low,
    Medium,
    High,
    Critical
}
