namespace ServiceDeskLite.Domain.Tickets;

public enum TicketStatus
{
    New,
    Triaged,
    InProgress,
    Waiting,
    Resolved,
    Closed
}
