classDiagram
    class Ticket {
        +TicketId Id
        +string Title
        +string Description
        +TicketPriority Priority
        +TicketStatus Status
        +DateTimeOffset CreatedAt
        +DateTimeOffset? DueAt
        +Ticket(id, title, description, priority, createdAt, dueAt?)
        +ChangeStatus(newStatus) void
    }
    class TicketId {
        <<record struct>>
        +Guid Value
        +New()$ TicketId
    }
    class TicketStatus {
        <<enumeration>>
        New
        Triaged
        InProgress
        Waiting
        Resolved
        Closed
    }
    class TicketPriority {
        <<enumeration>>
        Low
        Medium
        High
        Critical
    }
    class TicketWorkflow {
        <<static>>
        +CanTransition(from, to)$ bool
        +EnsureCanTransition(from, to)$ void
    }
    class Guard {
        <<static>>
        +NotNullOrWhiteSpace(value, paramName)$ void
        +MaxLength(value, maxLength, paramName)$ void
        +NotNull~T~(value, paramName)$ void
    }
    class DomainException {
        +DomainError Error
    }
    class DomainError {
        <<record>>
        +string Code
        +string Message
    }

    Ticket "1" --> "1" TicketId : identified by
    Ticket --> TicketStatus : has
    Ticket --> TicketPriority : has
    Ticket ..> TicketWorkflow : delegates ChangeStatus to
    Ticket ..> Guard : validated by
    DomainException --> DomainError : carries
